--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -1,8 +1,6 @@
-/* frontend/src/Home.css */
 .home-container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
     background-color: #f4f4f9;
     position: relative;
     z-index: 1;
@@ -22,7 +20,7 @@
   .banner {
     position: relative;
     width: 100vw; /* Ocupar todo el ancho */
-    min-height: 100vh; /* Ocupar toda la altura */
+    min-height: 80vh; /* Ocupar toda la altura */
     background: url('/src/assets/backgrounds/home-background.avif') no-repeat center center/cover;
     overflow: visible;
     margin: 0; /* Eliminar margen */
