--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: #34495E; /* Color de fuente negro por defecto */
-  background-color: #f8f5f0; /* Fondo crema claro */
+  background-color: #fafafa; /* Fondo crema claro */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
